[tool.poetry]
name = 'indoNLP'
version = '0.1.0'
description = 'Indonesian NLP written in python'
authors = ['Wahyu Setianto <wahyusetianto19@gmail.com>']
license = 'MIT'
readme = 'README.md'
packages = [{ include = 'indoNLP' }]

[tool.poetry.urls]
repository = 'https://github.com/Hyuto/indo-nlp'
"Bug Tracker" = 'https://github.com/Hyuto/indo-nlp/issues'

[tool.poetry.dependencies]
python = '^3.7'

[tool.poetry.dev-dependencies]
pytest = '^7.1.2'
black = '^22.3.0'
isort = '^5.10.1'
toml = "^0.10.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
  | __pycache__
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['indoNLP', 'test']
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
