[tool.poetry]
name = 'indoNLP'
version = '0.1.1'
description = 'Simple library to make your Indonesian NLP project easier.'
authors = ['Wahyu Setianto <wahyusetianto19@gmail.com>']
license = 'MIT'
readme = 'README.md'
packages = [{ include = 'indoNLP' }]

[tool.poetry.urls]
repository = 'https://github.com/Hyuto/indo-nlp'
"Bug Tracker" = 'https://github.com/Hyuto/indo-nlp/issues'

[tool.poetry.dependencies]
python = '^3.7'

[tool.poetry.dev-dependencies]
pytest = '^7.1.2'
black = '^22.3.0'
isort = '^5.10.1'
pytest-cov = '^3.0.0'
tomli = '^2.0.1'
mypy = '^0.961'
coverage = '^6.4.2'
pre-commit = '^2.20.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.mypy]
files = ['indoNLP']
show_error_codes = true
strict = true

[tool.black]
target_version = ['py37', 'py38', 'py39', 'py310']
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
  | __pycache__
)/
'''
