[tool.poetry]
name = 'indoNLP'
version = '0.3.2'
description = 'Simple python library with zero additional dependencies to make your Indonesian NLP project easier.'
authors = ['Wahyu Setianto <wahyusetianto19@gmail.com>']
license = 'MIT'
readme = 'README.md'
packages = [{ include = 'indoNLP' }]
keywords = ["indoNLP", "nlp", "indonesian-language"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: Indonesian",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]

[tool.poetry.urls]
homepage = 'https://Hyuto.github.io/indo-nlp/'
repository = 'https://github.com/Hyuto/indo-nlp'

[tool.poetry.dependencies]
python = '^3.7'

[tool.poetry.dev-dependencies]
pytest = '^7.1.2'
black = '^22.3.0'
isort = '^5.10.1'
pytest-cov = '^3.0.0'
tomli = '^2.0.1'
mypy = '^0.961'
coverage = '^6.4.2'
pre-commit = '^2.20.0'
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.0"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-gen-files = "^0.3.5"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.mypy]
files = ['indoNLP']
show_error_codes = true
strict = true

[tool.black]
target_version = ['py37', 'py38', 'py39', 'py310']
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = 'tests'
markers = ['slow']

[tool.coverage.report]
show_missing = true
exclude_lines = ['pragma: no cover', 'except Exception as e:']
